--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "grunt-contrib-copy": ">= 0.4.1",
         "grunt-contrib-watch": ">= 0.4.1",
         "grunt-contrib-requirejs": ">= 0.4.0",
-        "grunt-contrib-jshint": ">= 0.3.0"
+        "grunt-contrib-jshint": ">= 0.3.0",
+        "rxjs-gestures": ">= 0.0.9"
     },
     "private": "true"
 }
